# SubsetMask

./: .gitignore  CITATION.cff  INSTALLATION.md  LICENSE.txt  README.md  Tutorial.ipynb  Tutorial_Vignette.Rmd  base_directory.txt  pyproject.toml  requirements.txt  run_software.R
SubsetMask_pkg/: Tutorial.ipynb
SubsetMask_pkg/core/: main.py  utils.py
docs/: .buildinfo  README.html  genindex.html  index.html  installation_guide.html  objects.inv  output_structure.html  package_description.html  search.html  searchindex.js
docs/_sources/: README.md.txt  index.md.txt  installation_guide.md.txt  output_structure.md.txt  package_description.md.txt
docs/_sources/tutorials/: Tutorial.ipynb.txt  image_class_tutorial.ipynb.txt
docs/_static/: custom.css
docs/tutorials/: Tutorial.html  image_class_tutorial.html
software/: draw_masks_CLI.py  get_mask_coords_CLI.py  subset_metadata_CLI.R  subset_seurat_object.R
software/export.images/: main-export.images.R  test-export.images.R
software/export.images_dimensions/: main-export.images_dimensions.R
software/export_images/: helpers-export.images.R  main-export.images.R
software/make.sample_fovs/: main-make.sample_fovs.R  main-make.sample_fovs_from_coordinates.R
subsetmask/: __init__.py  image_class.py  image_helpers.py
subsetmask.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
subsetmask/core/: main.py  plotting.py  utils.py
test/: .Rhistory  test_mac.sh  test_run.sh  test_win.bat
test/slide_1/: image_dimensions.csv
test/slide_1/coordinates/: label1.csv  label2.csv
