[project]
name = "subsetmask"
version = "0.1.0"
description = "Toolkit for subsetting spatial transcriptomics datasets with coordinate-based masking."
authors = [
  { name = "Robin Carvajal", email = "your@email.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "geopandas==1.1.0",
  "imageio==2.37.0",
  "matplotlib==3.10.3",
  "napari==0.6.1",
  "numpy==2.3.0",
  "opencv-python==4.11.0.86",
  "pandas==2.3.0",
  "shapely==2.1.1"
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["subsetmask"]

[tool.setuptools.package-data]
subsetmask = ["*.csv", "*.json"]
